[package]
name = "smp-tui"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
rand = "0.8.5"
ratatui = { version = "0.26.3", features = ["all-widgets"] }
reqwest = { version = "0.12.4", features = ["json", "blocking", "gzip", "deflate"] }
serde_json = "1.0.117"
tokio = "1.38.0"
